# Online-Mart-Api-Aiokafka

./: README.md  docker-compose.yml
01_user_service/: .env  Dockerfile  database.py  main.py  models.py  notification_pb2.py  payment_pb2.py  pyproject.toml  router.py  user.proto  user_pb2.py
01_user_service/services/: consumers.py  notification_consumer.py  order_consumer.py  transaction_consumer.py  user_service.py
01_user_service/tests/: test_main.py
02_product_service/: .env  Dockerfile  database.py  main.py  models.py  product.proto  product_pb2.py  pyproject.toml  router.py
02_product_service/services/: consumers.py  inventory_consumer.py  order_consumer.py  product_service.py
03_order_service/: .env  Dockerfile  Readme.md  database.py  main.py  models.py  order.proto  router.py
03_order_service/services/: consumers.py  notification_consumer.py  order_service.py
04_inventory_service/: .env  Dockerfile  database.py  inventory.proto  inventory_pb2.py  main.py  models.py  pyproject.toml  router.py
04_inventory_service/services/: consumers.py  inventory_consumer.py  inventory_service.py
05_notification_service/: .env  Dockerfile  database.py  main.py  models.py  notification.proto  router.py
05_notification_service/services/: consumers.py  notification_service.py
06_payment_service/: .env  Dockerfile  database.py  main.py  models.py  payment.proto  pyproject.toml  router.py
06_payment_service/services/: consumers.py  payment_service.py
